infra/terraform/security_groups.tf
# -----------------------
# Bastion Security Group
# -----------------------
resource "aws_security_group" "bastion_sg" {
  name   = "dailyfix-bastion-sg"
  vpc_id = aws_vpc.dailyfix_vpc.id

  ingress {
    description = "SSH from your IP only"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"] # 🔴 change this
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

# -----------------------
# ALB Security Group
# -----------------------
resource "aws_security_group" "alb_sg" {
  name   = "dailyfix-alb-sg"
  vpc_id = aws_vpc.dailyfix_vpc.id

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

# -----------------------
# App Server Security Group
# -----------------------
resource "aws_security_group" "app_sg" {
  name   = "dailyfix-app-sg"
  vpc_id = aws_vpc.dailyfix_vpc.id

  ingress {
    description     = "SSH from bastion"
    from_port       = 22
    to_port         = 22
    protocol        = "tcp"
    security_groups = [aws_security_group.bastion_sg.id]
  }

  ingress {
    description     = "App traffic from ALB"
    from_port       = 8000
    to_port         = 8000
    protocol        = "tcp"
    security_groups = [aws_security_group.alb_sg.id]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

# -----------------------
# RDS Security Group
# -----------------------
resource "aws_security_group" "rds_sg" {
  name   = "dailyfix-rds-sg"
  vpc_id = aws_vpc.dailyfix_vpc.id

  ingress {
    from_port       = 3306
    to_port         = 3306
    protocol        = "tcp"
    security_groups = [aws_security_group.app_sg.id]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
